[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "connectwise-mcp"
version = "0.1.0"
description = "ConnectWise Manage MCP server — 45 tools for tickets, projects, agreements, companies, and finance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "connectwise", "psa", "msp", "ai"]
dependencies = [
    "fastmcp>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
connectwise-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/Mfrostbutter/connectwise-mcp"
Repository = "https://github.com/Mfrostbutter/connectwise-mcp"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
